Finished Header section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" href="styles.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,16 +12,58 @@
     <title>SE Factory - Empowering Youth With Tech Jobs</title>
   </head>
   <body>
-    
-    <div class="header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col justify-content-center"> <img src="/public/se-logo.png" alt=""> </div>
-                <div class="col justify-content-center"></div>
+
+    <header>
+        <div class="top">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-3 text-center"> <img src="/public/se-logo.png" alt=""> 
+                    </div>
+                    <div class="col-md ">        
+                      <ul class="links">
+                        <li>Home</li>
+                        <li>Get Trained</li>
+                        <li>Hire Talent</li>
+                        <li>FAQs</li>
+                        <li>Blog</li>
+                        <li>About Us</li>
+                        <li>Contact</li>
+                        <li><button class="btn-green">Apply Now</button>  
+                        </li>
+                      </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="hero">
+          <h1>Empowering youth</h1>
+          <h2>with tech jobs.</h2>
+          <div><p>SE Factory’s top-ranked training programs graduate tech professionals working for companies all over the world.</p></div>
+          <button class="btn-green">Learn more</button>
+        </div>
+    </header>
 
+    <section id="two">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-4 stats">
+            <h2>90%</h2>
+            <span>Employment Success Rate</span>
+            <span></span>
+          </div>
+          <div class="col-md-4 stats">
+            <h2>500+</h2>
+            <span>500+</span>
+            <span>500+</span>
+          </div>
+          <div class="col-md-4 stats">
+            <h2>145+</h2>
+            <span>145+</span>
+            <span>145+</span>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
