HTML + CSS - Skills section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SE Factory - Empowering Youth With Tech Jobs</title>
   </head>
   <body>
-
+    <!-- Start Header -->
     <header>
         <div class="top">
             <div class="container-fluid">
@@ -42,28 +42,51 @@
           <button class="btn-green">Learn more</button>
         </div>
     </header>
+    <!-- End Header -->
 
-    <section id="two">
+    <!-- Start Section 1 -->
+    <section id="one">
       <div class="container">
         <div class="row text-center">
-          <div class="col-md-4 stats">
-            <h2>90%</h2>
-            <span>Employment Success Rate</span>
-            <span></span>
+          <div class="col-md-4">
+            <div class="next">
+              <h2>90%</h2>
+              <p>Employment Success Rate</p>
+            </div>
           </div>
-          <div class="col-md-4 stats">
-            <h2>500+</h2>
-            <span>500+</span>
-            <span>500+</span>
+          <div class="col-md-4">
+            <div class="next">
+              <h2>500+</h2>
+              <p>Youth Trained Since 2016</p>
+            </div>
           </div>
-          <div class="col-md-4 stats">
-            <h2>145+</h2>
-            <span>145+</span>
-            <span>145+</span>
+          <div class="col-md-4">
+            <div class="next">
+              <h2>145+</h2>
+              <p>Global Recruitment Partner Companies</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- End Section one -->
+    <section id="two">
+      <div class="container-fluid">
+        <div class="row ">
+          <div class="col-lg-6">
+            <div><img src="./public/artboard-1.jpg" alt=""></div>
+          </div>
+          <div class="col-lg-6">
+            <div>
+              <h2 >Get the skills companies look for.</h2>
+              <p>Learn how to become a professional Full Stack Web Developer. Acquire technical and interpersonal skills, and gain access to a vast network of employers.</p>
+              <a href="">Learn more →</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
