HTML + CSS - Added Section Market

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </div>
         </div>
         <div class="hero">
-          <h1>Empowering youth</h1>
-          <h2>with tech jobs.</h2>
-          <div><p>SE Factory’s top-ranked training programs graduate tech professionals working for companies all over the world.</p></div>
+          <h1 class="shrink">Empowering youth</h1>
+          <h2 class="shrink">with tech jobs.</h2>
+          <div><p class="shrink">SE Factory’s top-ranked training programs graduate tech professionals working for companies all over the world.</p></div>
           <button class="btn-green">Learn more</button>
         </div>
     </header>
@@ -70,6 +70,8 @@
       </div>
     </section>
     <!-- End Section one -->
+
+    <!-- Start Section two -->
     <section id="two">
       <div class="container-fluid">
         <div class="row ">
@@ -86,7 +88,22 @@
         </div>
       </div>
     </section>
+    <!-- End Section two -->
 
+    <!-- Start Section three -->
+    <section id="three">
+      <h2 class="display-4">Discover the program <br><strong> that's right for you.</strong></h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="/public/fsw.png" alt="">
+          </div>
+          <div class="col-lg-6">
+            <img src="/public/fsw.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
