Added Sections (Market + Partners)

--- a/index.html
+++ b/index.html
@@ -104,6 +104,82 @@
         </div>
       </div>
     </section>
+    <!-- End Section three -->
+
+    <!-- Start Section four -->
+    <Section id="four">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 market">
+            <img src="/public/artboard-2.jpg" alt="">
+          </div>
+          <div class="col-lg-6 market">
+            <div>
+              <h2>Our graduates are <strong> market ready.</strong></h2>
+              <p>Students go through deep technical training, including robust theory and intensive coding, with emphasis on critical thinking and a can-do attitude.</p>
+              <a href="">Learn more →</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </Section>
+    <!-- End Section Four -->
+
+    <!-- Start Section Five -->
+    <section id="five">
+      <div class="RP container">
+        <h3>Join our <strong> Global Recruitment Partner Network </strong> and <br> access top talent wherever you are.</h3>
+        <p>150+ companies from over 10 countries have joined our network since 2016</p>
+      </div>
+      <div class="container">
+        <img src="./public/RP+partner+logos.jpg" alt="">
+      </div>
+      <div class="container">
+        <img id="review" src="./public/review-1.jpg" alt="">
+      </div>
+    </section>
+    <!-- End Section Five -->
+
+    <!-- Start Sectio Six -->
+    <section id="six">
+      <h1 class="text-center">In the Media</h1>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-3 col-md-6"><img src="./public/9.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/8.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/3.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/1.png" alt=""></div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6"><img src="./public/2.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/7.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/5.png" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img src="/public/4.png" alt=""></div>
+        </div>
+        
+      </div>
+    </section>
+    <!-- End Section Six -->
+
+    <!-- Start Section Seven -->
+    <section id="seven">
+      <h1 class="text-center">Funding Partners</h1>
+      <div class="container">
+        <img src="/public/SEF_donors-01+(1).png" alt="">
+      </div>
+      <div class="container split"></div>
+      <h1 class="text-center">Strategic Partners</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6"><img class="partners" src="/public/image-asset.jpeg" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img class="partners" src="/public/6.jpg" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img class="partners" src="/public/Beruu.jpg" alt=""></div>
+          <div class="col-lg-3 col-md-6"><img class="partners" src="/public/spark.jpg" alt=""></div>
+        </div>
+      </div>
+    </section>
+    <!-- End Section Seven -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
