--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Start Header -->
-    <header>
+    <header class="jumbotron-fluid">
         <div class="top">
             <div class="container-fluid">
                 <div class="row">
@@ -99,7 +99,7 @@
             <img src="/public/fsw.png" alt="">
           </div>
           <div class="col-lg-6">
-            <img src="/public/fsw.png" alt="">
+            <img src="/public/fcs.png" alt="">
           </div>
         </div>
       </div>
@@ -179,6 +179,24 @@
       </div>
     </section>
     <!-- End Section Seven -->
+
+    <!-- Started Section Eight -->
+    <section id="footer">
+      <div>
+        <h1><Strong> Subscribe to our newsletter</Strong> <br> and stay up-to-date with our latest news.</h1>
+      </div>
+      <button>Subscribe</button>
+      <div class="container-fluid last">
+        <div class="row">
+          <div class="col-lg-4">
+            <a href="">Privacy Policy</a>
+          </div>
+          <div class="col-lg-5"><p>Copyright © 2022 SE Factory SAL. All Rights Reserved.</p></div>
+          <div class="col-lg-2"> Social media icons</div>
+        </div>
+      </div>
+    </section>
+    <!-- End Section Eight -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
